--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.30.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-promise": "^0.6.0",
     "redux-thunk": "^3.1.0",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
